[gd_scene load_steps=4 format=3 uid="uid://dt1bevy1y000k"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_b7w0a"]
[ext_resource type="Theme" uid="uid://pm8ksi4me33p" path="res://themes/titlescreentheme.tres" id="2_jkope"]
[ext_resource type="PackedScene" uid="uid://r3xkgrl88g4y" path="res://Scenes/settings_dialog.tscn" id="3_dfumt"]

[node name="Title Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7w0a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.08, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -322.0
offset_top = -104.0
offset_right = 323.0
offset_bottom = 442.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jkope")

[node name="New Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Load Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsDialog" parent="." instance=ExtResource("3_dfumt")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = 683.0
offset_top = 42.0
offset_right = -900.0
offset_bottom = -463.0
scale = Vector2(1.73264, 1.73264)

[connection signal="pressed" from="VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
